# geodesic_examples

./: CMakeLists.txt  README.md
src/: example0.cpp  example1.cpp  geodesic_algorithm_exact.h  geodesic_algorithm_graph_base.h  geodesic_algorithm_subdivision.h  geodesic_memory.h  geodesic_mesh.h  geodesic_mesh_elements.h
